# Speech-Driven-to-3D-Facial-Animation

./: CMakeLists.txt  README.md  build.sh  vcpkg.json
cmd/retargeting/: CMakeLists.txt
cmd/retargeting/include/: MayaMesh.h
pkg/retargeting/: CMakeLists.txt
pkg/retargeting/src/: ActionUnit.cpp
